[gd_scene load_steps=27 format=2]

[ext_resource path="res://Assets/Sprites/Skeleton-die-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/hellhound-run-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/hellhound-attack-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/Retro Impact Punch Hurt 01.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/fire_c.wav" type="AudioStream" id=5]
[ext_resource path="res://src/actors/Hellhound.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 16.5, 9 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 16, 8.5 )

[node name="Hellhound" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="hellhound_anim" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
frames = SubResource( 18 )
animation = "move"
frame = 3
playing = true

[node name="BulletCollider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BulletCollider"]
shape = SubResource( 20 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="hellhound_anim" to="." method="_on_hellhound_anim_finished"]
[connection signal="body_entered" from="BulletCollider" to="." method="_on_bullet_entered"]
